--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ for (let i = 0; i < 15; i++) {
   <img id="topGif" src="1.gif" alt="Cute GIF">
 </div>
 
-<h1 id="question">Do you love me? 💖</h1>
+<h1 id="question">Do you love me eleanooooooooor? 💖</h1>
 <div class="buttons" id="questionContainer">
   <button id="yesBtn">Yes 😍</button>
   <button id="noBtn">No 😅</button>
@@ -165,3 +165,4 @@ yesBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
