--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<span class="space"/><span class="comments">*2025-08-17.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
 			06/06 <span class="keyword">first time we met<br />
-			Our first words toghter on telegrame :  <span class="keyword"><br />
+			Our first words together on telegrame :  <span class="keyword"><br />
 			You : hey; <br />
 			Me : hello there; <br />
 			You : rick huh; <br />
@@ -53,7 +53,7 @@
 			<br>
 			I want to say:<br />
 			Baby, I love you forever;<br />
-			I love you as much stars in the sky;<br />
+			I love you as much stars in a clear night sky with no lights around;<br />
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
